<resources>
    <string name="videona_web">http://www.videona.com</string>
    <string name="app_name">Videona</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="toast_trim">Video Recorded trimmed in /sdcard/Movies/Videona</string>
    <string name="toast_exit">Press back to exit</string>
    <string name="edit_title_name">Edit Room</string>
    <string name="edit_text_fx">Working on effects</string>
    <string name="edit_text_look">Working on magic</string>
    <string name="edit_text_special">Special features</string>
    <string name="edit_text_insufficient_memory">Not enough memory</string>
    <string name="toast_exit_edit">Press back again to exit the edit room</string>
    <string name="toast_add_videos">Please, add videos to project</string>
    <string name="not_ask_again">Not ask again</string>
    <string name="not_thanks">Not thanks</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="indiegogo">Indiegogo</string>
    <string name="welcome">This is a beta version of the new Social Video Platform, you can help us
to develop it just giving feedback or you can go to our crowdfunding
campaign on Idiegogo site and support us and get some upgrades on the app.
We will be very grateful if you spread the news in your social networks.</string>
    <string name="text_video_name">"Video name: "</string>
    <string name="text_video_duration">"Duration: </string>
    <string name="text_video_description">Description: </string>
    <string name="share_using">"Share video using "</string>
    <string name="please_wait">Please wait</string>
    <string name="dialog_processing">Making magic on your video</string>
    <string name="dialog_processing_audio">"Adding audio "</string>
    <string name="getit">"Get it"</string>
    <string name="action_finish">"Finish"</string>
    <string name="action_next">"Next"</string>
    <string name="confirmDeleteTitle">Delete</string>
    <string name="confirmDeleteTitle1">video</string>
    <string name="confirmDeleteTitle2">videos</string>
    <string name="confirmDeleteMessage">¿Do you want to delete this elements?</string>
    <string name="confirmTrim">Done</string>
    <string name="music_genre_rock">Rock</string>
    <string name="music_genre_reggae">Reggae</string>
    <string name="music_genre_hiphop">Hip Hop</string>
    <string name="music_genre_jazz">Jazz</string>
    <string name="music_genre_pop">Pop</string>
    <string name="music_genre_country">Country</string>
    <string name="music_genre_electronic">Electronic</string>
    <string name="music_genre_classic">Classic</string>
    <string name="music_genre_classic_piano">Piano</string>
    <string name="music_genre_classic_violin">Violin</string>
    <string name="music_genre_classic_clarinet">Clarinet</string>
    <string name="music_genre_ambiental">Ambiental</string>
    <string name="music_genre_caribbean">Caribbean</string>
    <string name="music_genre_folk">Folk</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_hint">ohvideo@videona.es</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="please_sign_up">Create a new account</string>
    <string name="new_user_btn_content_descp">New user</string>
    <string name="accesibility_login_with_facebook">login with facebook</string>
    <string name="checkBox_remember_me">Remember Me</string>
    <string name="please_login">Please login in your account</string>
    <string name="loginError">Something was wrong. Try to login again</string>
    <string name="signUpError">Something bad happened. Try to register again</string>
    <string name="invalid_video">This video is not valid. Please, select another one</string>
    <string name="filter_effect_sepia">sepia</string>
    <string name="filter_effect_aqua">aqua</string>
    <string name="filter_effect_emboss">emboss</string>
    <string name="filter_effect_mono">mono</string>
    <string name="filter_effect_negative">negative</string>
    <string name="filter_effect_neon">neon</string>
    <string name="filter_effect_none">none</string>
    <string name="filter_effect_posterice">posterice</string>
    <string name="filter_effect_sketch">sketch</string>
    <string name="filter_effect_solarice">solarice</string>
    <string name="filter_effect_whiteboard">whiteboard</string>
    <string name="filter_effect_blackboard">blackboard</string>
    <string name="title_camera_section">Camera</string>
    <string name="resolution">Resolution</string>
    <string name="low_resolution_name">Good (720p)</string>
    <string name="low_resolution_value">Good</string>
    <string name="good_resolution_name">Very good (1080p)</string>
    <string name="good_resolution_value">Very good</string>
    <string name="high_resolution_name">Excellent (4K)</string>
    <string name="high_resolution_value">Excellent</string>
    <string name="quality">Quality</string>
    <string name="join_beta">Join Videona Beta</string>
    <string name="email">email</string>
    <string name="send_email">Send</string>
    <string name="invalid_email">Please, insert a valid email</string>
    <string name="low_quality_name">Good (2 Mbps)</string>
    <string name="low_quality_value">Good</string>
    <string name="good_quality_name">Very good (5 Mbps)</string>
    <string name="good_quality_value">Very good</string>
    <string name="high_quality_name">Excellent (10 Mbps)</string>
    <string name="high_quality_value">Excellent</string>
    <string name="title_advanced_section">Advanced</string>
    <string name="content_advanced_section">Join Videona Beta</string>
    <string name="content_join_beta_dialog">Join our Beta if you want to be an ambassador of
        Videona and test our next updates. You can review them and help us to create the best video
        app for smartphones of the moment. Leave us your email so we can contact you and tell you
        the steps.</string>
    <string name="positive_button_join_beta_dialog">Why not, let\'s try!</string>
    <string name="negative_button_join_beta_dialog">Not now, thanks</string>
    <string name="title_about_section">About</string>
    <string name="title_vote_section">Vote</string>
    <string name="content_vote_section">Vote our app</string>
    <string name="title_contact_section">Contact</string>
    <string name="content_contact_section">Give us feedback</string>
    <string name="title_tutorial_section">Tutorial</string>
    <string name="content_tutorial_section">See our tutorial</string>
    <string name="preferences_resolution_not_supported">Incompatible device</string>
    <string name="preferences_quality_not_supported">Incompatible device</string>
    <string name="addMediaItemToTrackError">Oops! Something bad happened. Try to add again</string>
    <string name="confirmDeleteVideosFromProjectTitle">Delete videos from project</string>
    <string name="confirmDeleteVideosFromProjectMessage">¿Do you want to delete this elements?</string>
    <string name="deletedVideosFromProject">Deleted videos from project. Record or add new videos</string>
    <string name="addVideosToProject">Please, record or add new videos</string>
    <string name="invalidRazorTime">Please, select an instant time to razor this video</string>
    <string name="aboutUsTitle"><u>About us</u></string>
    <string name="aboutUsContent">
        Record, edit, share…Three simple things you will like to do as soon as you have the new
        Videona App in your smartphone.\nCopyright &#169; 2015. Videona Socialmedia S.L. All rights
        reserved.\n
    </string>
    <string name="contactUsTitle"><u>Contact us</u></string>
    <string name="contactUsContent">Visit our web page:</string>
    <string name="videonaWeb">http://www.videona.com\n</string>
    <string name="versionTitle"><u>Version</u></string>
    <string name="versionContent">beta </string>
    <string name="licenseTitle"><u>Free software licenses</u></string>
    <string name="permissionsDeniedMessage">Videona needs some permissions to use the camera or record audio.\nWithout them Videona can\'t continue and will be closed.</string>
    <string name="CloseBecauseOfPermissionsTitle">Permissions not granted</string>
</resources>