<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        tools:text="@string/CloseBecauseOfPermissionsTitle"
        android:textSize="25sp"
        android:textColor="@color/textColorTitle"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        tools:text="@string/permissionsDeniedMessage"
        android:padding="8dp" />

    <Button
        android:id="@+id/ok"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/button_color_selector"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textColor="@color/textColorButton"
         />
</LinearLayout>