<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        tools:text="@string/CloseBecauseOfPermissionsTitle"
        android:textSize="23sp"
        android:textColor="@color/textColorTitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorSecondaryLight" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:src="@drawable/gatito_rules_pressed" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="@string/permissionsDeniedMessage"
            android:padding="8dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            tools:text="@string/no"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:background="@color/colorTransparent"
            android:textColor="@color/textColorTitle"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:text="@string/yes"
            android:layout_alignParentEnd="true"
            android:background="@color/colorTransparent"
            android:textColor="@color/textColorTitle"
            android:textAllCaps="false"/>

    </RelativeLayout>

</LinearLayout>