<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sing_up_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_login_background_skateboard"
    android:focusableInTouchMode="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserSignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/please_sign_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_big" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:minHeight="50dp"
        android:minWidth="120dp"
        android:text="@string/sign_up" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ohvideo"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/email_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ConfirmPassword"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/pepito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_marginRight="16dp"
        android:layout_marginStart="100dp"
        android:contentDescription="New User"
        android:src="@drawable/activity_login_icon_new_user_normal" />


</RelativeLayout>
