<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/videona_blue"
    android:orientation="vertical">

    <VideoView
        android:id="@+id/videoViewShare"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/LinearLayoutShareInfoVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textViewVideoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_video_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewVideoDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_video_duration"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewVideoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_video_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageBackRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButtonPlayShare"
        android:layout_alignStart="@+id/imageButtonShare"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:src="@drawable/ic_action_rec_back"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/imageButtonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/LinearLayoutShareInfoVideo"
        android:layout_marginRight="53dp"
        android:background="@null"
        android:src="@drawable/ic_action_share" />

    <ImageButton
        android:id="@+id/imageButtonPlayShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:src="@drawable/ic_action_play" />

    <SeekBar
        android:id="@+id/seekBarShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:layout_weight="1"
        android:indeterminate="false"
        android:maxHeight="5dp"
        android:progress="1"
        android:progressDrawable="@color/grey"
        android:thumb="@drawable/point" />

</RelativeLayout>